<resources>
    <!-- Este es texto para el splash -->
    <string name="app_name">ShopList</string>
    <string name="description_app">Tu lista del mercado, siempre contigo. Organiza tus compras de manera inteligente y sin complicaciones.</string>
    <string name="button_register">Registrate</string>
    <string name="button_login">Iniciar Sesión</string>

    <!-- Este es texto para el registro -->
    <string name="title_register">Crea Una Cuenta</string>
    <string name="hint_nombre">Nombre Completo</string>
    <string name="hint_correo">Correo o Usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_confirm_password">Confirmar Contraseña</string>
    <string name="footer_login">Ya tienes una cuenta ? <![CDATA[<u>Inicia Sesión Aqui!</u>]]></string>

    <!-- Este es texto para el iniciar sesion -->
    <string name="title_login">Iniciar Sesion</string>
    <string name="hint_mail_login">Correo</string>
    <string name="hint_password_login">Contraseña</string>
    <string name="footer_password_login"><![CDATA[<u>Olvidaste tu contraseña?</u>]]></string>
    <string name="footer_register">No tienes una cuenta ? <![CDATA[<u>Registrate Aqui!</u>]]></string>

    <!-- Este es texto para la recuperacion de la contraseña -->
    <string name="title_recover_password">Recupera Tu \n Contraseña</string>
    <string name="hint_mail_recover_password">Escribe tu email para que te mandemos un correo de recuperacion</string>
    <string name="button_back">Volver</string>
    <string name="button_next">Continuar</string>
    <string name="hint_confirm">Confirmar</string>

    <!-- Este es texto para el home -->
    <string name="title_home">Bienvenido</string>
    <string name="label_your_lists">Tus Listas</string>
    <string name="empty_title">Empieza por crear una lista</string>
    <string name="empty_description">Tu lista inteligente de mercado se mostrará aquí. Comienza creando una nueva lista.</string>
    <string name="menu_search">Buscar</string>
    <string name="menu_profile">Perfil</string>
    <string name="menu_history">Historial</string>

    <!-- Este es texto para la pantalla de creditos -->
    <string name="title_credits">Creditos</string>
    <string name="credits_header_initial">T</string>
    <string name="credits_circle_initial">C</string>
    <string name="credits_text_primary">\"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\"</string>
    <string name="credits_text_secondary">\"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\"</string>

    <!-- Este es texto para la pantalla crear lista -->
    <string name="title_create_list">Crea Tu Lista</string>
    <string name="create_list_description">Crea tu propia lista de mercado, dale un nombre caracteristico y creativo!</string>
    <string name="label_list_name">Nombre de la Lista: *</string>
    <string name="hint_list_name">Ej: Lista Mercado 1</string>
    <string name="label_optional_first_product">Agrega tu primer producto: (Opcional)</string>
    <string name="label_add_here">Agrega Aqui</string>
    <string name="button_confirm_create">Confirmar y Crear</string>

    <!-- Este es texto para la pantalla agregar producto -->
    <string name="title_add_product">Agregar Producto</string>
    <string name="label_product_name">Nombre del Producto: *</string>
    <string name="hint_product_name">Ej: Manzanas</string>
    <string name="label_product_category">Categoria: *</string>
    <string name="hint_product_category">Seleccionar categoria</string>
    <string name="label_product_quantity">Cantidad: *</string>
    <string name="hint_product_quantity">Ej: 5</string>
    <string name="label_product_price">Precio Estimado:</string>
    <string name="hint_product_price">Ej: 10000</string>
    <string name="button_add_product">Agregar Producto</string>
    <string name="title_edit_product">Editar Producto</string>
    <string name="button_save_changes">Guardar Cambios</string>
    <string name="button_edit_product">Editar</string>
    <string name="button_delete_product">Eliminar</string>

    <!-- Este es texto para la pantalla detalle lista -->
    <string name="title_list_details">Detalles de la Lista</string>
    <string name="label_products_count">Productos</string>
    <string name="label_total_price">Total Estimado:</string>
    <string name="text_no_products">Sin productos aún</string>
    <string name="button_finish_list">Finalizar Lista</string>
    <string name="button_add_more_products">Agregar Más Productos</string>
    <string name="button_logout">Cerrar Sesión</string>
    <string name="title_activity_splash_compose">SplashActivity_Compose</string>
    <string name="title_activity_login_compose">LoginActivityCompose</string>
    <string name="title_activity_register_compose">RegisterActivityCompose</string>
    <string name="title_activity_recover_password_compose">RecoverPasswordActivityCompose</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="title_activity_home_compose">HomeActivityCompose</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_create_list_compose">CreateListActivityCompose</string>
    <string name="title_activity_add_product_compose">AddProductActivityCompose</string>
    <string name="title_activity_list_details_compose">ListDetailsActivityCompose</string>
    <string name="title_activity_edit_product_compose">EditProductActivityCompose</string>
    <string name="title_activity_credits_compose">CreditsActivityCompose</string>
    <string name="title_activity_history_compose">HistoryActivityCompose</string>
    <string name="title_activity_list_detail_history_compose">ListDetailHistoryActivityCompose
    </string>
    <string name="title_activity_profile_compose">ProfileActivityCompose</string>
    <string name="title_activity_session_manager">SessionManager</string>

</resources>