<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/headerRegister"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:background="@drawable/background_header_splash">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|start"
                android:layout_marginStart="30dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:src="@drawable/icon_page"
                    android:scaleType="fitCenter"/>

                <Space
                    android:layout_width="90dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@color/black"
                    android:textSize="32sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </FrameLayout>

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_below="@id/headerRegister"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_yellow_back"
            android:src="@drawable/icon_arrow_left_register"
            app:tint="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnBack"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingHorizontal="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_login"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:textStyle="bold"
                android:layout_marginBottom="30dp"/>

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:hint="@string/hint_mail_login"
                android:drawableStart="@drawable/icon_mail_register"  android:drawablePadding="12dp"
                android:backgroundTint="@color/yellow_light"
                android:inputType="textEmailAddress"
                android:paddingStart="12dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:passwordToggleEnabled="true"
                app:hintEnabled="false"
                app:passwordToggleTint="@color/yellow_main">

                <EditText
                    android:id="@+id/etPasswordLogin"
                    android:layout_width="match_parent"
                    android:layout_height="49dp"
                    android:backgroundTint="@color/yellow_light"
                    android:drawableStart="@drawable/icon_password_register"
                    android:drawablePadding="13dp"
                    android:hint="@string/hint_password_login"
                    android:inputType="textPassword"
                    android:paddingStart="12dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"  android:layout_marginTop="5dp"
                android:text="@string/footer_password_login"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="35dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="70dp"  android:background="@drawable/button_yellow"
                android:text="@string/button_login"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvGoToLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/footer_login"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </LinearLayout>
    </RelativeLayout>
</ScrollView>