<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/headerRegister"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:background="@drawable/background_header_splash">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|start"
                android:layout_marginStart="30dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:src="@drawable/icon_page"
                    android:scaleType="fitCenter"/>

                <Space
                    android:layout_width="90dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@color/black"
                    android:textSize="32sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </FrameLayout>

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_below="@id/headerRegister"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_yellow"
            android:src="@android:drawable/ic_menu_revert"
            android:tint="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnBack"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingHorizontal="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_register"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:textStyle="bold"
                android:layout_marginBottom="30dp"/>

            <EditText
                android:id="@+id/etNombre"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/hint_nombre"
                android:drawableStart="@android:drawable/ic_menu_myplaces"
                android:drawablePadding="10dp"
                android:drawableTint="@color/yellow_main"
                android:backgroundTint="@color/yellow_light"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:hint="@string/hint_correo"
                android:drawableStart="@android:drawable/ic_dialog_email"
                android:drawablePadding="10dp"
                android:drawableTint="@color/yellow_main"
                android:backgroundTint="@color/yellow_light"
                android:inputType="textEmailAddress" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:passwordToggleEnabled="true"
                app:hintEnabled="false"
                app:passwordToggleTint="@color/yellow_main">
                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/hint_password"
                    android:drawableStart="@android:drawable/ic_lock_idle_lock"
                    android:drawablePadding="10dp"
                    android:drawableTint="@color/yellow_main"
                    android:backgroundTint="@color/yellow_light"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:passwordToggleEnabled="true"
                app:hintEnabled="false"
                app:passwordToggleTint="@color/yellow_main">
                <EditText
                    android:id="@+id/etConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/hint_confirm_password"
                    android:drawableStart="@android:drawable/ic_lock_idle_lock"
                    android:drawablePadding="10dp"
                    android:drawableTint="@color/yellow_main"
                    android:backgroundTint="@color/yellow_light"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnFinalizeRegister"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/button_yellow"
                android:text="Registrate"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvGoToLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/footer_login"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </LinearLayout>
    </RelativeLayout>
</ScrollView>